--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
   </style>
 </head>
 <body>
+  <audio src="audio.mp3.mp3" autoplay loop></audio>
   <div class="rain"></div>
 
   <!-- Caja de regalo -->
