--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
   </style>
 </head>
 <body>
-<audio src="audio.mp3.mp3" autoplay loop></audio>
+  <audio id="audio-control" loop>
+  <source src="audio.mp3.mp3" type="audio/mpeg">
+  Tu navegador no soporta el elemento de audio.
+</audio>
+<audio src="audio.mp3.mp3" autoplay loop>
+  </audio>
   <div class="rain"></div>
 
   <!-- Caja de regalo -->
