--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
   </style>
 </head>
 <body>
-  <audio id="audio-control" loop>
-  <source src="audio.mp3.mp3" type="audio/mpeg">
-  Tu navegador no soporta el elemento de audio.
+<audio src="audio.mp3.mp3" autoplay loop>
+  </audio>
+  <div class="rain"></div>
   <!-- Caja de regalo -->
   <div class="gift-stage active">
     <div class="gift-box-wrap" id="openGift">
